<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pg.androidGames.game4.GameActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="52dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/DeltaY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" />

        <EditText
            android:id="@+id/DeltaX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" />

        <Button
            android:id="@+id/btnHint"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint" />

        <Button
            android:id="@+id/btnRetry"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

        <Button
            android:id="@+id/btnNext"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next" />

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical" >

        <pg.androidGames.game4.view.DrawingView
            android:id="@+id/viewDraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8" />

        <EditText
            android:id="@+id/txtGesture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="true" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radPenWide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadPenWidthClick"
                    android:text="@string/pen_wide" />

                <RadioButton
                    android:id="@+id/radPenMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadPenWidthClick"
                    android:text="@string/pen_medium" />

                <RadioButton
                    android:id="@+id/radPenThin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadPenWidthClick"
                    android:text="@string/pen_thin" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:baselineAligned="true"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radColorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadPenColorClick"
                    android:text="@string/pen_blue" />

                <RadioButton
                    android:id="@+id/radColorRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadPenColorClick"
                    android:text="@string/pen_red" />

                <RadioButton
                    android:id="@+id/radColorGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadPenColorClick"
                    android:text="@string/pen_green" />

                <RadioButton
                    android:id="@+id/radColorYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadPenColorClick"
                    android:text="@string/pen_yellow" />

                <RadioButton
                    android:id="@+id/radColorOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadPenColorClick"
                    android:text="@string/pen_orange" />

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>